# workload-discovery-on-aws

./: .gitignore  .prettierignore  .prettierrc  .viperlightignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  NOTICE.txt  README.md  SECURITY.md  buildspec.yml  debugging-flowchart.mmd  git-info  package-lock.json  package.json  solution-manifest.yaml  sonar-project.properties
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  stale.yml
.github/workflows/: pipeline-workflow.yml  publish-documentation.yaml  pull-request-workflow.yml
deployment/: build-open-source-dist.sh  build-s3-dist.sh  local-deploy-script.sh.example  perspective-setup.template  perspective-setup.yaml  run-unit-tests.sh
docs/: antora.yml  package-lock.json  package.json
docs/modules/ROOT/: nav.adoc
docs/supplemental-ui/partials/: footer-content.hbs  header-content.hbs
source/backend/discovery/: .nsprc  Dockerfile  buildspec.yml  package-lock.json  package.json  (+2 more)
source/backend/functions/metrics-uuid/: Pipfile  metrics_uuid.py  pyproject.toml  test_metrics_uuid.py
source/backend/functions/remove-appinsights/: Pipfile  pyproject.toml  remove_appinsights.py  test_remove_appinsights.py
source/docs/: antora-playbook.yml
source/e2e/: package-lock.json  package.json
source/frontend/: .eslintrc.yml  .gitignore  .nsprc  README.md  babel.config.json  cypress.config.mjs  index.html  jest.config.js  package-lock.json  package.json  vite.config.js  vite.config.mjs  vitest.workspace.mjs
source/infrastructure/: README.md  package-lock.json  package.json  tsconfig.json
(+1219 files in other folders)
