[project]
name = "metrics-uuid"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "moto==5.0.9",
    "boto3==1.34.118",
    "pytest-cov==5.0.0",
    "crhelper==2.0.11",
    "mock==5.1.0",
    "pytest-mock==3.14.0",
    "joserfc==1.6.3",
    "aws-lambda-powertools==3.2.0",
    "pip-audit",
]
